# codec_perceptibility_gap

./: .gitignore  DOCS_BUILD.md  README.md  codec1.py  header.tex  perceptibility_gap_paper_v1_2b.md  perceptibility_gap_paper_v1_4.docx  perceptibility_gap_paper_v1_4.md  perceptibility_gap_paper_v1_4.tex  perceptibility_gap_paper_v1_5.docx  perceptibility_gap_paper_v1_5.md  perceptibility_gap_paper_v1_5.tex
codec_codex_experiments/: GOAL.md  HANDOFF_2026-05-30.md  LICENSE  MANIFEST.md  Makefile  README.md  critic1.md  goal  pyproject.toml  pytest.ini  requirements.txt
codec_codex_experiments/.github/workflows/: claimgate-ci.yml
codec_codex_experiments/carbon_audit/: PILOT_RESULTS.md  PREREGISTRATION.md  RESULTS.md  africa_pilot.py  kariba_additionality.py  kariba_real_polygon.py
codec_codex_experiments/configs/: confirmatory_local.json  demo.json
codec_codex_experiments/docs/: PLAN_F5_cross_family.md  experiment_notes.md  reporting_template.md
codec_codex_experiments/examples/: tasks.jsonl
codec_codex_experiments/prompts/: codecguard_ollama_prompts.md
codec_codex_experiments/results/: crc_difficulty_disentangled_results.md  crc_results.md  crc_three_family_results.md  crc_two_arm_results.md  critic1_mitigation_results.md  critical_review.md  cross_family_results.md  dern_stage_a_results.md  dern_stage_b_energy_method.md  dern_stage_b_results.md  mitigation_results.md
codec_codex_experiments/results/confirmatory_local/: report.md  report_auto.md  results.json
codec_codex_experiments/results/confirmatory_mitigated/: report.md  results.json
codec_codex_experiments/results/critic1_mitigation/: report.md  results.json
codec_codex_experiments/results/cross_family/: report.md  results.json
codec_codex_experiments/results/demo/: report.md  results.json
codec_codex_experiments/results/demo_mitigated/: report.md
codec_codex_experiments/results/demo_run/: report.md  results.json
codec_codex_experiments/src/: __init__.py  bridging_validation.py  codec_contest.py  cross_family.py  magnetic_pendulum.py  proof_ladder.py  report.py  run_all.py  sources.py
codec_codex_experiments/src/claimgate/: CHANGELOG.md  README.md  __init__.py  (+1 more)
codec_codex_experiments/tests/: test_bridging_validation.py  test_cross_family.py  test_regression_linear.py  test_smoke.py  test_sources.py
(+113 files in other folders)
