[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claimgate"
version = "0.1.0"
description = "Gate a quantitative claim: wrap it in adversarial controls and get Verified | Refused. Refuses to report a number until it's earned."
readme = "src/claimgate/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wayne A. Satz" }]
keywords = ["statistics", "validation", "evaluation", "reproducibility", "skill-score", "permutation-test", "baseline", "abstention"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "build>=1.0", "twine>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/claimgate"]

[tool.ruff]
line-length = 100
