[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claimgate"
dynamic = ["version"]
description = "Gate a quantitative claim: wrap it in adversarial controls and get Verified | Refused. Refuses to report a number until it's earned."
readme = "src/claimgate/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Wayne A. Satz" }]
keywords = ["statistics", "validation", "evaluation", "reproducibility", "skill-score", "permutation-test", "baseline", "abstention"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "build>=1.0", "twine>=5.0"]

[tool.hatch.version]
path = "src/claimgate/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/claimgate"]
artifacts = ["src/claimgate/py.typed"]

[tool.hatch.build.targets.sdist]
include = ["src/claimgate", "LICENSE"]

[tool.ruff]
line-length = 100
